--- a/Java_Basics/.classpath
+++ b/Java_Basics/.classpath
@@ -6,5 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="tests"/>
+	<classpathentry kind="lib" path="C:/Users/ecolv/Downloads/hamcrest-all-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ecolv/Downloads/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
